<!--
  ~ Copyright (c) 2017 stfalcon.com
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">UARoads</string>
    <string name="stfalcon_com">stfalcon.com</string>

    <string name="menu_tracks">Tracks</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_settings">Settings</string>
    <string name="error_play_services_unavailable">Google Play Services unavailable. This app will not work</string>
    <string name="error_location_permission_not_granted">This app can\'t not work without this permission</string>
    <string name="tab_routes">Routes</string>
    <string name="tab_record">Record</string>
    <string name="find_route_from">From</string>
    <string name="find_route_to">To</string>
    <string name="find_route_build">Build route</string>

    <string name="search_hint">Search</string>
    <string name="search_no_result_error">Nothing was found for %s</string>

    <string name="best_route_from">from</string>
    <string name="best_route_to">to</string>
    <string name="best_route_duration">%1$d h %2$d m</string>
    <string name="best_route_duration_short">%1$d m</string>
    <string name="best_route_distance">%.0f km</string>

    <string name="query_ukraine">Ukraine,+%s</string>
    <string name="place_my_location">My location</string>
    <string name="place_my_location_pos">%1$f %2$f</string>

    <string name="settings_label">Settings</string>
    <string name="settings_section_user">User</string>
    <string name="settings_email_hint">Enter e-mail</string>
    <string name="settings_login">Log in</string>
    <string name="settings_logout">Log out</string>
    <string name="settings_login_description">Authorized users can view their site statistics, get in TOP and gain reward for their achievements.</string>
    <string name="settings_section_settings">Settings</string>
    <string name="settings_send_wifi_only">Send only via Wi-Fi</string>
    <string name="settings_pit_sound">Pit sound</string>
    <string name="settings_auto_start_sound">Sound of a record auto-start</string>
    <string name="settings_auto_send">Send routes automatically</string>
    <string name="settings_autostart">Record auto-stop/auto-start</string>
    <string name="settings_show_notification">Show notification (improves auto-start of the recording)</string>
    <string name="settings_section_about">About app</string>
    <string name="settings_app_version">App version: </string>
    <string name="settings_user_id">User ID: </string>
    <string name="settings_user_id_copied">Successfully copied to clipboard!</string>
    <string name="settings_dev_mode_enabled">You switched to developer mode</string>
    <string name="settings_dev_mode_disabled">You\'re not developer</string>
    <string name="settings_error_email">Please, enter a valid email address</string>

    <string name="intro_screen_1">Build routes through the best ukrainian roads in view of road
        quality.</string>

    <string name="intro_screen_2">Collect road quality statistics with help of automatic pit
        fixation.
    </string>

    <string name="intro_start">Start</string>

    <string name="record_units_km">km</string>
    <string name="record_last_session_desc">last trip</string>
    <string name="record_processed_distance">processed distance on server</string>
    <string name="record_copyright_made_by">Made by</string>
    <string name="record_start">start\nRecording</string>
    <string name="record_stop">Stop</string>
    <string name="record_pause">Pause</string>
    <string name="record_continue">Continue</string>
    <string name="record_current_session_desc">current trip</string>
    <string name="record_force_value">Force value: %.2fG</string>
    <string name="gps_label">GPS</string>

    <string name="ntf_recording">Recording…</string>
    <string name="ntf_pause">Pause</string>

    <string name="tracks_label">Trips</string>
    <string name="tracks_distance">%d m</string>
    <string name="error_connection">Check your internet connection</string>
    <string name="empty_trips">You don`t have any records.\nStart a new trip\nwith UaRoads</string>
    <string name="changelog_message">Congratulations! You have installed a completely new version of the app! Although your records from the previous version were removed, but total distance is saved and can be viewed in the "Record". To view the information, log in to your account. Thanks for a collected statistic!</string>
</resources>
