<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 stfalcon.com
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_controls"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">


    <ImageView
        android:id="@+id/ivPitIndicator"
        android:layout_width="@dimen/live_button_pit_indicator_size"
        android:layout_height="@dimen/live_button_pit_indicator_size"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:src="@drawable/gradient_circular_red" />


    <ImageView
        android:id="@+id/ivStartEffect"
        android:layout_width="@dimen/live_btn_start_stroke_size"
        android:layout_height="@dimen/live_btn_start_stroke_size"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:src="@drawable/shape_orange_stroke_circle" />

    <ImageView
        android:id="@+id/ivStartEffect2"
        android:layout_width="@dimen/live_btn_start_stroke_size"
        android:layout_height="@dimen/live_btn_start_stroke_size"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:src="@drawable/shape_grey_stroke_circle" />

    <ImageView
        android:id="@+id/ivStartBackground"
        android:layout_width="@dimen/live_btn_start_background_size"
        android:layout_height="@dimen/live_btn_start_background_size"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:src="@drawable/shape_accent_circle" />


    <FrameLayout
        android:id="@+id/containerStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="48dp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:duplicateParentState="true"
            android:gravity="center"
            android:text="@string/record_start"
            android:textAllCaps="true"
            android:textColor="@drawable/selector_btn_record_text"
            android:textSize="@dimen/start_button_text_size" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/containerPauseStop"
        android:layout_width="@dimen/live_btn_start_stroke_size"
        android:layout_height="@dimen/live_btn_start_stroke_size"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="invisible"
        android:weightSum="5">

        <RelativeLayout
            android:id="@+id/containerPause"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPause"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:duplicateParentState="true"
                android:gravity="center"
                android:text="@string/record_pause"
                android:textAllCaps="true"
                android:textColor="@drawable/selector_btn_record_text"
                android:textSize="@dimen/start_button_text_size" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#ffffff" />

        <FrameLayout
            android:id="@+id/containerStop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:duplicateParentState="true"
                android:gravity="center"
                android:text="@string/record_stop"
                android:textAllCaps="true"
                android:textColor="@drawable/selector_btn_record_text"
                android:textSize="@dimen/start_button_text_size" />

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>